[package]
name = "kernel"
version = "0.0.0"
edition = "2024"

[dependencies]
common = { git = "https://codeberg.org/xsomex/OS-common.git" }

display_text = { git = "https://codeberg.org/xsomex/OS-modules_display-text.git", features = ["processor_graphics"] }
#memory = { path = "../modules/interfaces/memory/", features = ["paging_recursive"] }
